Use friendly &lambda; HTML entity until I use an image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <header>
       <div class="divider"></div>
       <figure class="logo">
-        <a href="/">&#x1D77A;</a>
+        <a href="/">&lambda;</a>
       </figure>
       <hgroup>
         <h1><a href="/">Jacques Fuentes</a></h1>
@@ -34,7 +34,7 @@
     </section>
     <footer>
       <figure class="logo">
-        <a href="/">&#x1D77A;</a>
+        <a href="/">&lambda;</a>
       </figure>
       <p><span class="author">Jacques Fuentes</span></p>
     </footer>
