--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -95,10 +95,11 @@ body > header
         color: $red
     a
       display: inline-block
-      margin-top: 43px
+      margin-top: 46px
       margin-left: 2px
       color: white
-      font-size: 72px
+      font-size: 82px
+      font-weight: 600
       +text-shadow(0px 3px 8px $grayDark)
   hgroup
     max-width: 80%
