Use Helvetica for font-family on figure.logo

--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -200,6 +200,8 @@ body > footer
     display: inline
     position: relative
     top: 2px
+    a
+      font-family: Helvetica
 
 section article footer
   padding-bottom: 10px
