--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -42,6 +42,9 @@ article
       font-weight: bold
     em
       font-style: italic
+    img
+      overflow: auto
+      max-width: 100%
 
 blockquote
   border-left: 5px solid $red
