Fix nav list padding

--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -125,6 +125,7 @@ body > header
     +box-shadow(inset 0px 0px 1px darken($red, 15))
     ul
       margin: 0
+      padding: 0
       li
         display: inline-block
     a
