Fix about page reference

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
           <li><a href="/">essays</a></li>
           <li><a href="https://github.com/jpfuentes2">code</a></li>
           <li><a href="https://twitter.com">twitter</a></li>
-          <li><a href="/about">about</a></li>
+          <li><a href="/about.html">about</a></li>
         </ul>
       </nav>
     </header>
