--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,6 @@
   </head>
   <body>
     <header>
-      <div class="divider"></div>
       <figure class="logo">
         <a href="/">
           <svg width="100px" height="100px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
@@ -80,7 +79,7 @@
     </section>
     <footer>
       <figure class="logo">
-        <a href="/">&lambda;</a>
+        &lambda;
       </figure>
       <p><span class="author">Jacques Fuentes</span></p>
     </footer>
