Add twitter-tweet styles

--- a/sass/_new.sass
+++ b/sass/_new.sass
@@ -37,7 +37,7 @@ section
         line-height: 32px
         text-align: center
     padding-bottom: 25px
-    h1, h2, h3, p, blockquote
+    h1, h2, h3, h4, h5, p, blockquote
       padding: 0px 20px
       margin: 25px 0
     p
@@ -251,6 +251,9 @@ p.note
     -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0
     -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0
     box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0
+
+.twitter-tweet body
+  float: left
 
 /* Specify class=linenums on a pre to get line numbering
 
