--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,7 @@
       </figure>
       <hgroup>
         <h1><a href="/">Jacques Fuentes</a></h1>
-        <h3><p>I love to learn, create, read, and marvel at the beautfy of life.</p></h3>
+        <h3><p>I love to learn, create, read, and marvel at the beauty of life.</p></h3>
       </hgroup>
       <nav>
         <ul>
