--- a/layouts/_default/all.html
+++ b/layouts/_default/all.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
+    <title>Jacques Fuentes{{if ne .Title ""}} | {{ .Title }}{{end}}</title>
     <meta name="viewport" content="width=device-width">
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css">
@@ -83,9 +83,29 @@
         </ul>
       </nav>
     </header>
+    {{ if .IsPage }}
     <section>
-      {{ content }}
+      <article>
+        <header>
+          <h1>
+            {{ .Title }}
+            <time datetime="{{ .Date }}" pubdate>{{ .Date.Format "January, 2006" }}</time>
+          </h1>
+        </header>
+        {{ .Content }}
+        <h3>More Essays</h3>
+        {{ template "_default/list.html" . }}
+      </article>
     </section>
+    {{ else }}
+    <section>
+      <article>
+        <header>
+          <h1>Essays</h1>
+          {{ template "_default/list.html" . }}
+        </header>
+    </section>
+    {{ end }}
     <footer>
       <figure class="logo">
         &lambda;
