Fix twitter, rm more essays, add rss

--- a/layouts/_default/all.html
+++ b/layouts/_default/all.html
@@ -6,9 +6,11 @@
     <title>Jacques Fuentes{{if ne .Title ""}} | {{ .Title }}{{end}}</title>
     <meta name="viewport" content="width=device-width">
     <!-- syntax highlighting CSS -->
+    <link rel="canonical" href="{{ .Permalink }}">
     <link rel="stylesheet" href="/css/syntax.css">
     <link rel="stylesheet" href="/css/screen.css">
     <link href='http://fonts.googleapis.com/css?family=Stoke|Josefin+Sans:300,400,600,700' rel='stylesheet' type='text/css' />
+    <link href="/rss.xml" type="application/atom+xml" rel="alternate" title="{{ .Site.Title }}">
   </head>
   <body>
     <script>
@@ -78,7 +80,7 @@
         <ul>
           <li><a href="/">essays</a></li>
           <li><a href="https://github.com/jpfuentes2">code</a></li>
-          <li><a href="https://twitter.com">twitter</a></li>
+          <li><a href="https://twitter.com/jpfuentes2">twitter</a></li>
           <li><a href="/about.html">about</a></li>
         </ul>
       </nav>
@@ -93,8 +95,8 @@
           </h1>
         </header>
         {{ .Content }}
-        <h3>More Essays</h3>
-        {{ template "_default/list.html" . }}
+        <!--<h3>More Essays</h3>-->
+        {{/* template "_default/list.html" . */}}
       </article>
     </section>
     {{ else }}
