--- a/layouts/_default/all.html
+++ b/layouts/_default/all.html
@@ -95,6 +95,16 @@
           </h1>
         </header>
         {{ .Content }}
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+          var disqus_shortname = 'jpfuentes2';
+          (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            // dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+          })();
+        </script>
         <!--<h3>More Essays</h3>-->
         {{/* template "_default/list.html" . */}}
       </article>
