--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,6 +1,29 @@
+$red: #9d261d
+$black: black
+$offBlack: #454545
+$linkColor: $offBlack
+$font-size: 20px
+$bodyFont: 'Josefin Sans', sans-serif
+$headerFont: 'Stoke', serif
+
 @import "normalize"
-@import "mixins"
-@import "base"
+@import "bootstrap/variables"
+@import "bootstrap/mixins"
+@import "bootstrap/type"
+@import "bootstrap/code"
+@import "compass/css3/text-shadow"
+
+@mixin user-select-none
+  -webkit-touch-callout: none
+  -webkit-user-select: none
+  -khtml-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
+  user-select: none
+
+@mixin indent-content
+  padding: 0px 20px
+  margin: 25px 0
 
 h1, h2, h3, h4, h5, h6
   font-family: $headerFont
